Updated NEWS for release

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
 ===============================================================================
-WELCOME TO BANSHEE 1.6.1 - Released April 28, 2010
+WELCOME TO BANSHEE 1.6.1 - Released May 7, 2010
 ===============================================================================
 
   * Banshee is a multimedia management and playback application for GNOME.
@@ -26,6 +26,7 @@ NEW AWESOME FEATURES AND ENHANCEMENTS
       * Automatically scan Music and Video libraries on first start
       * Improve search responsiveness on large libraries
       * Add AlbumArtist to the search menu (bgo#615692)
+      * Improved Last.fm authentication experience
       * Many enhancements to MeeGo support
 
     Notable Bugs Fixed (since 1.6.0):
