--- a/AUTHORS
+++ b/AUTHORS
@@ -19,6 +19,7 @@ Contributors:
   Andrew Conkling
   Andrés G. Aragoneses
   Andy Midgette
+  Aran Cox
   Arthur Carli
   Arun Raghavan
   Aurélien Mino
@@ -54,6 +55,7 @@ Contributors:
   David Spreen
   David Stone
   Diego E. Pettenò
+  Dougal Stanton
   Eitan Isaacson
   Elena Grassi
   Eoin Hennessy
@@ -92,6 +94,7 @@ Contributors:
   Julien Moutte
   Juri Pakaste
   Ken Vandine
+  kentaro KAZUHAMA
   Kevin Duffus
   Konstantin Oshiyko
   Larry Ewing
@@ -134,6 +137,8 @@ Contributors:
   Scott Peterson
   Sebastian Dröge
   Shaun McCance
+  Sjoerd Simons
+  Tim Fisken
   Tim Yamin
   Tobias Mueller
   Todd Berman
