corrected Telugu Translations

--- a/po/te.po
+++ b/po/te.po
@@ -4918,7 +4918,7 @@ msgstr ""
 msgid "Transferring {0} file at {1} KB/s"
 msgid_plural "Transferring {0} of {2} files at {1} KB/s"
 msgstr[0] "{0} ఫైలును {1} KB/s వద్ద బదిలీచేస్తోంది"
-msgstr[1] "{0} ఫైళ్ళను {1} KB/s వద్ద బదిలీచేస్తోంది"
+msgstr[1] "{2} ఫైళ్ళలో {0}ను {1} KB/s వద్ద బదిలీచేస్తోంది"
 
 #: ../src/Extensions/Banshee.Emusic/Banshee.Emusic/DownloadManager/DownloadUserJob.cs:133
 #: ../src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/DownloadManager/DownloadUserJob.cs:133
