Fix a Hungarian translation error

--- a/po/hu.po
+++ b/po/hu.po
@@ -2669,7 +2669,7 @@ msgstr "Külső dokumentum"
 
 #: ../src/Core/Banshee.ThickClient/Banshee.Collection.Gui/CoverArtEditor.cs:80
 msgid "Choose New Cover Art..."
-msgstr "Válasszon új borítót…"
+msgstr "Új borító kiválasztása…"
 
 #: ../src/Core/Banshee.ThickClient/Banshee.Collection.Gui/CoverArtEditor.cs:98
 msgid "Delete This Cover Art"
