po/vi.po: "Seek" -> "Tua"

--- a/po/vi.po
+++ b/po/vi.po
@@ -893,7 +893,7 @@ msgstr ""
 
 #: ../src/Clients/Booter/Booter/Entry.cs:175
 msgid "Seek to a specific point (seconds, float)"
-msgstr "Nhảy đến một điểm cụ thể (giây, float)"
+msgstr "Tua đến một điểm cụ thể (giây, float)"
 
 #: ../src/Clients/Booter/Booter/Entry.cs:176
 msgid "Set the currently played track's rating (0 to 5)"
@@ -2882,7 +2882,7 @@ msgstr "Hãy nhập địa chỉ của tập tin bạn muốn mở :"
 
 #: ../src/Core/Banshee.ThickClient/Banshee.Gui.Dialogs/SeekDialog.cs:41
 msgid "Seek to Position"
-msgstr "Nhảy tới vị trí"
+msgstr "Tua tới vị trí"
 
 #: ../src/Core/Banshee.ThickClient/Banshee.Gui/GlobalActions.cs:50
 msgid "_Media"
@@ -3018,11 +3018,11 @@ msgstr "Phát mục trước"
 
 #: ../src/Core/Banshee.ThickClient/Banshee.Gui/PlaybackActions.cs:85
 msgid "Seek _To..."
-msgstr "Nhảy _tới..."
+msgstr "Tua _tới..."
 
 #: ../src/Core/Banshee.ThickClient/Banshee.Gui/PlaybackActions.cs:86
 msgid "Seek to a specific location in current item"
-msgstr "Nhảy tới một vị trí cụ thể trong mục hiện tại"
+msgstr "Tua tới một vị trí cụ thể trong mục hiện tại"
 
 #: ../src/Core/Banshee.ThickClient/Banshee.Gui/PlaybackActions.cs:90
 msgid "Jump to the currently playing item"
@@ -4043,7 +4043,7 @@ msgstr "Làm sạch tìm kiếm"
 
 #: ../src/Core/Banshee.Widgets/Banshee.Widgets/SeekSlider.cs:58
 msgid "Seek"
-msgstr "Nhảy"
+msgstr "Tua"
 
 #: ../src/Core/Banshee.Widgets/Banshee.Widgets/StreamPositionLabel.cs:148
 msgid "Idle"
