Docs: Removed "Common Problems", bug 661902
Removed the empty section "Common Problems" from index.page. See: https://bugzilla.gnome.org/show_bug.cgi?id=661902
Added to TODO file.

--- a/help/C/TODO
+++ b/help/C/TODO
@@ -6,3 +6,4 @@ TODO
 * Add CD Burning page
 * Add Advanced Search
 * Added extensions sub-menu - document all official and community extensions
+* Add section "Common Problems"
