--- a/NEWS
+++ b/NEWS
@@ -1,80 +1,29 @@
 ===============================================================================
-Banshee 2.6.0 - 2012-09-29
+Banshee 2.6.1 - 2013-04-11
 ===============================================================================
 
-    Banshee 2.6 is the culmination of six months' work by 15 developers, 30
-    translators and dozens of bug reporters and testers. It is a stable release,
-    the successor to Banshee 2.4.
-
-    New Features:
-
-      * Lots of improvement on OS X:
-
-            * Hardware support for USB mass storage devices.
-            * Handle opening files directly in Finder.
-            * Use native file chooser dialogs for importing files.
-            * Improve keyboard shortcuts.
-            * Fix various volume issues and inconsistencies.
-            * Switch to gtk-mac-integration and move to cocoa API.
-            * Add debug and logging facility to OS X launcher.
-
-      * LastFM: Add device scrobbling support
-
-            Enable Last.fm scrobbling of recent plays from a connected device.
-            Currently only available on devices supported by the AppleDevice
-            extension.
-
-      * File management options are now specific to each source
-
-            The "Copy files when importing" and "Update file and folder names"
-            settings can now be set independently for Music and Videos.
-
+    Banshee 2.6.1 is a stable, bug-fix release building on Banshee 2.6.0.
 
     Enhancements:
+      * bgo#697683: Dap.MassStorage: add product id for (WebOS) Palm Pre 2
+      * DatabaseImportManager: Add .amr to import whitelist
 
-      * LargeTrackInfoDisplay: Display track rating in "Now Playing" view
-      * MassStorage: Support the Samsung Galaxy Nexus Android phone
-      * Re-enable the AAC audio profile
-      * ThickClient: Append 'Banshee' to window title
-      * MassStorage: Support reading playlists from multiple folders
-      * Last.fm: Switch to 2.0 API for scrobbling and improve error handling
-      * LastFM: Remove invalid tracks from the queue after a scrobbling error
-      * Mpris: Add CanSetFullscreen and Fullscreen properties
-      * Replace custom volume widget with gtk's VolumeButton
-      * Improved threading in some areas around GUI manipulation
+    Notable Bugs Fixed (14 fixed since 2.6.0):
 
-
-    Notable Bugs Fixed (69 fixed since 2.4.0):
-
-      * Migo.Syndication: Handle feeds with malformed enclosure URLs
-      * AmazonMp3.Store: Fix URL redirection for sign out action
-      * bgo#577396: AppleDeviceTrackInfo: Fix reading and writing rating values
-      * bgo#587756: MassStorage: Save playlists relative to BaseDirectory
-      * bgo#615219: Don't increment skip counter when restarting current track
-      * bgo#623974: BasicTrackDetailsPage: Blank year spin button when 0
-      * bgo#624976: Gui.Canvas.Rect: log invalid values for Width/Height
-      * bgo#626659: ServiceManager: check properly if a service is required
-      * bgo#634063: FileSystemQueueSource: Reload when tracks are imported
-      * bgo#634758: PlaylistSource: Make sure the right tracks are removed
-      * bgo#636450: PathPattern: Limit filename length to 200 characters
-      * bgo#642830: AppleDevice: Fix device loading if invalid tracks are present
-      * bgo#657769: PrimarySource: Make sure AddTrackJob is marked as finished
-      * bgo#661112: Gui.Canvas.Size: log invalid values for Width/Height
-      * bgo#662909: PlaylistParser: Retry HTTP request after timeout
-      * bgo#666696: DapSource: Flush pending changes when quitting
-      * bgo#671948: DapSource: Put the playlists below the default sources
-      * bgo#672744: UPnPServerSource: Fix crash when getting the root object
-      * bgo#673037: libossifer: Fix certificate validation with libsoup 2.38
-      * bgo#673416: DbIteratorJob: Abort job after several consecutive failures
-      * bgo#676144: PlayQueueSource: Fix high memory usage when shuffling
-      * bgo#677288: PrimarySource: Fix pruning of artists from the database
-      * bgo#679260: AppleDevice: Postpone invalid tracks drop to the sync cycle
-      * bgo#680679: PlayerEngine: Fix reporting of playback errors
-      * bgo#682510: Mpris: Only raise PropertiesChanged signal if value changed
-      * bgo#682996: Dap.MassStorage: PlaylistPaths to return empty array
-      * bgo#683359: SourceView: log errors in SetCellDataFunc to avoid crashing
-      * bgo#683498: a11y: Fix a NullReferenceException in ListViewAccessible
-
+      * bgo#689123: DatabaseTrackInfo: don't default to MusicFilePattern when null
+      * bgo#696700: DapPropertiesDialog: Make sure progress bar value is valid
+      * bgo#696877: PlaylistFileUtil: Only import playlist items that are files
+      * bgo#692374: Avoid race when using GConf and DBus with threads
+      * bgo#696111: ListView: Do not enable a11y when it would cause freezes
+      * bgo#658142: Dap: better check for the playing track before ejecting
+      * bgo#684089: PrimarySource: prevent AddTrackJob respawn if cancelled
+      * bgo#689016: LastFm: Avoid crashing if scrobbling response is not JSON
+      * bgo#691694: configure: stop using obsolete AutoMake macro
+      * bgo#661902: Docs: Removed "Common Problems"
+      * bgo#688540: Mtp: Fix file type in sync with libmtp > 1.1.0
+      * bgo#639947: Dap: Use Unicode codes for quotation marks
+      * bgo#685920: LastFm: Null check for scrobble parameters
+      * bgo#685131: Add GTK category in .desktop files to comply with spec
 
 ===============================================================================
 SOURCES / PACKAGES
@@ -108,7 +57,7 @@ REPORT BUGS - HELP THE PROJECT - GROW THE COMMUNITY
     hesitate to file bugs!
 
     * http://banshee.fm/contribute/file-bugs
-    * http://bugzilla.gnome.org/enter_bug.cgi?product=banshee&version=2.6.0
+    * http://bugzilla.gnome.org/enter_bug.cgi?product=banshee&version=2.6.1
 
 
 ===============================================================================
@@ -121,19 +70,11 @@ Contributors For This Release
     The following people directly contributed to the release of this version
     of Banshee. Without their help, there would be no release!
 
-     Alexander Kojevnikov, Andres G. Aragoneses, Bertrand Lorentz,
-     David Nielsen, Diego Fernandez, Fabrice Bellet, Javon Harper,
-     Jensen Somers, Kevin Anthony, Olivier Dufour, Pavol Babincak,
-     Phil Trimble, Roderich Schupp, Samuel Gyger, Timo Dörr
+     Aaron Borden, Andres G. Aragoneses, Bertrand Lorentz, Hans Peter Jansson,
+     IBBoard, James Boocock, Nicholas Little, Phil Trimble, Sindhu S
 
     The following people contributed updated translations to this release.
     Without them, our project's reach would be much more limited.
 
-     Aurimas Černius, Alexandre Franke, Andika Triwidada, Andreas Nesdal,
-     Andrej Žnidaršič, Bruno Brouard, Cheng-Chia Tseng, Chris Leonard,
-     Daniel Mustieles, Daniel Nylander, Daniel Winzen, Filipe Gomes,
-     Fran Diéguez, Gabor Kelemen, Gianvito Cavasoli, Ioannis Zampoukas,
-     Jordi Mas, Joe Hansen, Kentaro KAZUHAMA, Lucas Mezencio, Marek Černocký,
-     Martin Srebotnjak, Matej Urbančič, Muhammet Kara, Мирослав Николић,
-     Piotr Drąg, Praveen Illa, Rūdolfs Mazurs, Techlive Zheng,
-     Žygimantas Beručka
+     Alexandre Franke, Andika Triwidada, Rafael Ferreira, Wolfgang Stöggl,
+     
