--- a/AUTHORS
+++ b/AUTHORS
@@ -1,10 +1,12 @@
 Maintainers:
   Aaron Bockover
   Alexander Kojevnikov
+  Andrés G. Aragoneses
   Bertrand Lorentz
   Gabriel Burt
 
 Contributors:
+  Aaron Borden
   Alan McGovern
   Abner Silva
   Adam Lofts
@@ -24,7 +26,6 @@ Contributors:
   Andrea Cimitan
   Andreas Neustifter
   Andrew Conkling
-  Andrés G. Aragoneses
   Andy Midgette
   Andy Street
   Aran Cox
@@ -91,10 +92,12 @@ Contributors:
   Hans Petter Jansson
   Harold Schreckengost
   Iain Lane
+  IBBoard
   Igor Guerrero Fonseca
   Ilya Konstantinov
   Ivan N. Zlatev
   Jack Deslippe
+  James Boocock
   James Otting
   James Willcox
   Jan Arne Petersen
@@ -143,6 +146,7 @@ Contributors:
   Nathan Palmer
   Neil Loknath
   Nicholas Doyle
+  Nicholas Little
   Nicholas Parker
   Nicolò Chieffo
   Nils Naumann
@@ -174,6 +178,7 @@ Contributors:
   Scott Peterson
   Sebastian Dröge
   Shaun McCance
+  Sindhu S
   Sjoerd Simons
   Tim Fisken
   Tim Yamin
