--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,10 @@
 ===============================================================================
-Banshee 2.6.1 - 2013-04-11
+Banshee 2.6.1 - 2013-04-16
 ===============================================================================
 
     Banshee 2.6.1 is a stable, bug-fix release building on Banshee 2.6.0.
 
-    Enhancements:
+    Minor enhancements:
       * bgo#697683: Dap.MassStorage: add product id for (WebOS) Palm Pre 2
       * DatabaseImportManager: Add .amr to import whitelist
 
