WebBrowser: Depend on libsoup >= 2.42, drop libsoup-gnome dependency
Since 2.42, libsoup-gnome is deprecated and all features are now
provided by libsoup itself, with saner defaults. So we now require
version 2.42, which allows us to drop the dependency on libsoup-gnome.

Note that we still use the GNOME proxy settings when available, as this
is now done by default by libsoup itself.

--- a/README
+++ b/README
@@ -39,6 +39,7 @@ acceptable; higher versions are fine.
   * gio-sharp           2.99.1
   * gdata-sharp-youtube 1.4
   * webkit-1.0          1.2.2
+  * libsoup             2.42
   * gudev-sharp         3.0
   * gkeyfile-sharp      0.1
   * libgpod-sharp       0.7.95
