--- a/README
+++ b/README
@@ -38,7 +38,7 @@ acceptable; higher versions are fine.
   * boo                 0.8.1
   * gio-sharp           2.99.1
   * gdata-sharp-youtube 1.4
-  * webkit-1.0          1.2.2
+  * webkitgtk-3.0       1.2.2
   * libsoup             2.42
   * gudev-sharp         3.0
   * gkeyfile-sharp      0.1
